--- a/content/posts/1658045972.md
+++ b/content/posts/1658045972.md
@@ -4,5 +4,5 @@ date: 2022-07-17T02:19:32-06:00
 draft: false
 ---
 
-bought it ![an nft](./images/b67210ece1732555a5c1a6e1710e5621.PNG)
+bought it ![an nft](https://cdn.farm.moooo.ooo/nft/c998fc12600b77a8219ec6f195ffd17a.PNG)
 
